app/styles/text.scss
h1 {
	font-size:62px;
	font-weight:500;
	line-height:1.15;
	font-family:'Poppins';
	color:var(--text-color);
}

h2 {
	font-size:34px;
	font-weight:500;
	line-height:1.5;
	font-family:'Inter';
	color:var(--text-color);
}

h3 {
	font-size:30px;
	font-weight:500;
	line-height:1.2;
	font-family:'Inter';
	color:var(--text-color);
}

h4 {
	font-size:22px;
	font-weight:500;
	line-height:1.2;
	font-family:'Inter';
	color:var(--text-color);
}

h5 {
	font-size:18px;
	font-weight:500;
	line-height:1.2;
	font-family:'Inter';
	color:var(--text-color);
}

p {
	font-size:18px;
	font-weight:400;
	line-height:1.5;
	font-family:'Inter';
	color:var(--faint-color);
}

n {

	display:inline;
	font-size:13px;
	font-weight:400;
	line-height:1.5;
	margin-top:10px;
	font-family:'Inter';
	color:var(--faint-color);

	a {
		color:var(--faint-color);
	}

}

pre, h1, h2, h3, h4, h5, p {
	&:not(:last-child) {
		padding-bottom:30px;
	}
}

